# squeeze

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  KEYBOARD_CONTROLS.md  Makefile  README.md  pyproject.toml  setup.py
doc/: api_ref.txt  example_status.xml
squeeze/: __init__.py  client.py  client_factory.py  config.py  constants.py  exceptions.py  html_client.py  json_client.py  retry.py  ui.py
squeeze/cli/: __init__.py  commands.py  main.py
tests/: __init__.py  conftest.py  py.typed  test_client.py  test_client_factory.py  test_commands.py  test_config.py  test_constants.py  test_exceptions.py  test_html_client.py  test_json_client.py  test_main.py  test_retry.py  test_ui.py
