[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Handle imports of external libraries
[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli_w"
ignore_missing_imports = true

# Treat test files less strictly
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["misc", "assignment"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "W"]
ignore = ["E203", "B904", "E501"]  # Ignore whitespace, exception clause, line length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused import

[tool.ruff.lint.isort]
known-first-party = ["squeeze"]
