[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
# Enable all strict mode options
strict = true
# Explicitly set key type checking flags
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# We use proper type stubs where available and confirm packages have py.typed
# No overrides needed for tomli and tomli_w - they both have py.typed files

# Treat test files less strictly
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["misc", "assignment"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "W"]
ignore = ["E203", "B904", "E501"]  # Ignore whitespace, exception clause, line length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused import

[tool.ruff.lint.isort]
known-first-party = ["squeeze"]
