[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
# Enable all strict mode options plus additional strictness flags
strict = true

# Additional strictness flags that go beyond --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_reexport = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# We use proper type stubs where available and confirm packages have py.typed
# tomli and tomli_w both include py.typed files and don't need overrides
# All code including tests uses the same strict type checking

# Allow importing rich libraries without needing type stubs
[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "W"]
ignore = ["E203", "B904", "E501"]  # Ignore whitespace, exception clause, line length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused import

[tool.ruff.lint.isort]
known-first-party = ["squeeze"]
